@@ -8,6 +8,7 @@ import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.temporal.TemporalAdjusters;
+import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -18,13 +19,16 @@ public class NotificationUtil {
 
     // 현재 요일 이후 가장 빠른 반복 요일을 찾음
     public DayOfWeek findNextDay(List<DayOfWeek> repeatDays, DayOfWeek currentDay) {
+        // 요일을 정렬 (월요일부터 일요일 순서)
+        repeatDays.sort(Comparator.comparingInt(DayOfWeek::getValue));
+
         for (DayOfWeek day : repeatDays) {
             if (day.getValue() > currentDay.getValue()) {
                 return day; // 현재 요일보다 나중 요일 반환
             }
         }
         // 반복문을 다 돌았지만 조건에 맞는 요일이 없으면 첫 번째 요일 반환
-        return repeatDays.get(0);
+        return repeatDays.getFirst();
     }
 
     // 다음 알림 날짜 계산
